--- a/src/app/components/correct-dialog/correct-dialog.component.html
+++ b/src/app/components/correct-dialog/correct-dialog.component.html
@@ -4,6 +4,6 @@
     <h2 style="text-align: center;">Play Again?</h2>
     <br><br>
     <mat-dialog-actions style="display: flex; justify-content: center;">
-        <button mat-button mat-dialog-close align="center">Yes</button>
+        <button mat-button mat-dialog-close color="primary" align="center">Yes</button>
     </mat-dialog-actions>
 </div>
