--- a/src/app/components/lose-dialog/lose-dialog.component.html
+++ b/src/app/components/lose-dialog/lose-dialog.component.html
@@ -1,9 +1,9 @@
 <div mat-dialog-content style="display: flex; justify-content: center; flex-direction: column;">
-    <h1 style="text-align: center;">You lost your head!</h1>
+    <h1 style="text-align: center;">The word was <strong>{{data.word}}</strong>! You deserved to lose your head.</h1>
     <br><br>
     <h2 style="text-align: center;">Play Again?</h2>
 </div>
 <br><br>
 <div mat-dialog-actions style="display: flex; justify-content: center;">
-    <button mat-button mat-dialog-close>Yes</button>
+    <button mat-button mat-dialog-close color="primary">Yes</button>
 </div>
